# pubmed_fetcher

./: README.md  doc file.docx  fetch_papers.py  get-papers-list.py  output.csv  pyproject.toml
src/pubmed_fetcher/: cancer.csv  fetch_papers.py  filtered_papers.csv
