[tool.poetry]
name = "pubmed-fetcher"
version = "0.1.0"
description = "Fetch research papers from PubMed."
authors = ["Pijush Mondal <pijushmondal900@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.scripts]
get-papers-list = "get-papers-list:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"